[gd_scene load_steps=2 format=3 uid="uid://xb1xjeyys1pf"]

[ext_resource type="Script" path="res://managers/item_description.gd" id="1_clwkt"]

[node name="ItemDescription" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1100.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_clwkt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32

[node name="UseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "USE ITEM"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
